<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/menu_title"
            android:textColor="@color/colorAccent"
            android:textSize="70sp" />

        <Button

            android:layout_marginBottom="5dp"
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_play" />

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/button_addBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_addBoard" />

        <Button
            android:id="@+id/button_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_language" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>